--- a/style.css
+++ b/style.css
@@ -124,49 +124,115 @@ header .payment {
 }
 
 /* carousel */
-.carousel {
-    width: 50%;
-    height: min-content;
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
+/*.carousel {*/
+/*    width: 50%;*/
+/*    height: min-content;*/
+/*    display: flex;*/
+/*    justify-content: space-between;*/
+/*    gap: 20px;*/
+/*}*/
+/*.thumbnails {*/
+/*    display: flex;*/
+/*    gap: 20px;*/
+/*    flex-direction: column;*/
+/*}*/
+/*.thumbnail {*/
+/*    width: 85px;*/
+/*    height: 85px;*/
+/*    cursor: pointer;*/
+/*}*/
+/*.main-picture {*/
+/*    position: relative;*/
+/*}*/
+/*.main-picture img {*/
+/*    width: 505px;*/
+/*    height: 100%;*/
+/*    object-fit: cover;*/
+/*    display: none;*/
+/*    transition: opacity 3s ease;*/
+/*}*/
+/*.main-picture img:first-child {*/
+/*    display: block;*/
+/*}*/
+/*.bullet.active {*/
+/*    background-color: var(--bullet-active-color);*/
+/*    transition: background-color 0.5s ease;*/
+/*}*/
+/*.bullets {*/
+/*    position: absolute;*/
+/*    bottom: 5px;*/
+/*    left: 50%;*/
+/*    transform: translateX(-50%);*/
+/*    display: flex;*/
+/*    gap: 20px;*/
+/*}*/
+/*.bullet {*/
+/*    border-radius: 50%;*/
+/*    border: clamp(0.188rem, 0.336vw - 0.028rem, 0.375rem) solid var(--bullet-color);*/
+/*    width: clamp(0.75rem, 1.342vw - 0.111rem, 1.5rem);*/
+/*    height: clamp(0.75rem, 1.342vw - 0.111rem, 1.5rem);*/
+/*    background-color: var(--bullet-color);*/
+/*    cursor: pointer;*/
+/*}*/
+/*.prev,*/
+/*.next {*/
+/*    position: absolute;*/
+/*    top: 50%;*/
+/*    cursor: pointer;*/
+/*}*/
+/*.prev {*/
+/*    transform: translateY(-50%) rotate(-90deg);*/
+/*    background-color: hsla(0, 0%, 100%, 0.85);*/
+/*    width: clamp(2.875rem, 1.119vw + 2.158rem, 3.5rem);*/
+/*    height: clamp(2.875rem, 1.119vw + 2.158rem, 3.5rem);*/
+/*    border: none;*/
+/*    left: 0;*/
+/*    font-size: 16px;*/
+/*    color: var(--black);*/
+/*    cursor: pointer;*/
+/*}*/
+/*.next {*/
+/*    transform: translateY(-50%) rotate(90deg);*/
+/*    background-color: hsla(0, 0%, 100%, 0.85);*/
+/*    width: 56px;*/
+/*    height: 56px;*/
+/*    border: none;*/
+/*    right: 0;*/
+/*    font-size: 16px;*/
+/*    color: var(--black);*/
+/*    cursor: pointer;*/
+/*}*/
+/* carousel */
+.carousel
+{
+    width: fit-content;
+    max-width: 100%;
+    overflow: hidden;
 }
-.thumbnails {
-    display: flex;
-    gap: 20px;
-    flex-direction: column;
+.mySwiperImages2 {
+    max-width: 505px;
 }
-.thumbnail {
+.mySwiperImages {
+    margin-top: 20px;
+    width: 505px;
+}
+.mySwiperImages img {
     width: 85px;
-    height: 85px;
+}
+.mySwiperImages2 img {
+    width: 505px;
+}
+.mySwiperImages .swiper-slide {
     cursor: pointer;
 }
-.main-picture {
-    position: relative;
+.mySwiperImages .swiper-slide {
+    cursor: pointer;
 }
-.main-picture img {
-    width: 505px;
-    height: 100%;
-    object-fit: cover;
-    display: none;
-    transition: opacity 3s ease;
-}
-.main-picture img:first-child {
-    display: block;
-}
-.bullet.active {
+.swiper-pagination-bullet.swiper-pagination-bullet-active {
     background-color: var(--bullet-active-color);
     transition: background-color 0.5s ease;
 }
-.bullets {
-    position: absolute;
-    bottom: 5px;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-    gap: 20px;
-}
-.bullet {
+.swiper-pagination-bullet {
     border-radius: 50%;
     border: clamp(0.188rem, 0.336vw - 0.028rem, 0.375rem) solid var(--bullet-color);
     width: clamp(0.75rem, 1.342vw - 0.111rem, 1.5rem);
@@ -174,35 +240,6 @@ header .payment {
     background-color: var(--bullet-color);
     cursor: pointer;
 }
-.prev,
-.next {
-    position: absolute;
-    top: 50%;
-    cursor: pointer;
-}
-.prev {
-    transform: translateY(-50%) rotate(-90deg);
-    background-color: hsla(0, 0%, 100%, 0.85);
-    width: clamp(2.875rem, 1.119vw + 2.158rem, 3.5rem);
-    height: clamp(2.875rem, 1.119vw + 2.158rem, 3.5rem);
-    border: none;
-    left: 0;
-    font-size: 16px;
-    color: var(--black);
-    cursor: pointer;
-}
-.next {
-    transform: translateY(-50%) rotate(90deg);
-    background-color: hsla(0, 0%, 100%, 0.85);
-    width: 56px;
-    height: 56px;
-    border: none;
-    right: 0;
-    font-size: 16px;
-    color: var(--black);
-    cursor: pointer;
-}
-
 /* products */
 .products-general h2 {
     font-size: clamp(1.5rem, 1.412vw + 1.156rem, 2.25rem);
@@ -412,9 +449,9 @@ header .payment {
     padding-bottom: 10px;
 }
 .customer-testimonial .text {
-    font-size: 12px;
+    font-size: 14px;
     font-weight: 400;
-    line-height: 14px;
+    line-height: 15px;
     letter-spacing: 0.05em;
     color: var(--black-lighter);
 }
@@ -532,7 +569,7 @@ header .payment {
     align-items: center;
 }
 .verified p {
-    font-size: 10px;
+    font-size: 11px;
     font-weight: 400;
     line-height: 12px;
     letter-spacing: 0.05em;
@@ -562,15 +599,15 @@ header .payment {
     display: flex;
     gap: 7px;
     align-items: flex-end;
-    font-size: 10px;
+    font-size: 11px;
     font-weight: 400;
     line-height: 12px;
     letter-spacing: 0.05em;
 }
 .customer-review .text {
-    font-size: 12px;
+    font-size: 14px;
     font-weight: 400;
-    line-height: 14px;
+    line-height: 15px;
     letter-spacing: 0.05em;
     padding-top: 15px;
     color: var(--black-lighter);
@@ -659,9 +696,9 @@ header .payment {
     padding-bottom: 10px;
 }
 .testimonial-long {
-    font-size: 12px;
+    font-size: 14px;
     font-weight: 400;
-    line-height: 14px;
+    line-height: 15px;
     letter-spacing: 0.05em;
     color: var(--black-lighter);
 }
